<?xml version="1.0"?>
<package format="2">
  <name>nikolaus</name>
  <version>0.0.0</version>
  <description>ROS lab package implementing hello_world, circle, and Haus des Nikolaus nodes</description>

  <maintainer email="your.email@domain.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>turtlesim</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>
</package>
